fix alignment and porportion issues

--- a/landmark.css
+++ b/landmark.css
@@ -6,12 +6,11 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    flex: 1 1 400px;   
+    flex: 1 1 200px;   
     max-width: 100%;
-    width: 100%;
+    width:20%;
     border: 2px solid #000000;
     padding: 5px 5px 5px 5px;
-    outline: 2px solid blue;
 }
 
 label {
@@ -62,14 +61,15 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 20px; 
-  width: 100%;
-  outline: 2px solid red;
+  width: 80%;
+  justify-content: center;
+  margin:auto;
 }
 
 #map {
-  flex: 1 1 300px;  
+  flex: 4 1 300px;  
   min-width: 0;
   min-height: 400px;
   max-width: 100%;
-  outline: 2px solid blue;
+  width: 80%;
 }
